--- a/Views/Bikes/Index.cshtml
+++ b/Views/Bikes/Index.cshtml
@@ -4,26 +4,82 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Bikes</h2>
-<table class="table table-bordered table-hover">
-    <thead>
-        <tr>
-            <th>Bike</th>
-            <th>Bike Type</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var bike in Model)
-        {
+<h2 style="text-align: center;">Bikes</h2>
+
+@if (!Model.Any())
+{
+    <p>There aren't any bikes yet.</p>
+    <p>
+        @Html.ActionLink("New Bike", "New", "Bikes", null, new { @class = "btn btn-primary" })
+    </p>
+}
+
+else
+
+{
+
+    <p>
+        @Html.ActionLink("New Bike", "New", "Bikes", null, new { @class = "btn btn-primary" })
+    </p>
+    <table id="bikes" class="table table-bordered table-hover">
+        <thead>
             <tr>
-                <td>
-                    @Html.ActionLink(bike.Name, "Details", "Bikes", new { id = bike.Id },
-               null)
-                </td>
-                <td>
-                    @bike.SurfaceType.Name
-                </td>
+                <th>Bike</th>
+                <th>Model</th>
+                <th>Surface Type</th>
+                <th>Amount in stock</th>
+                <th>Delete</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var bike in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(bike.Name, "Edit", "Bikes", new { id = bike.Id }, null)</td>
+                    <td>@bike.Model</td>
+                    <td>@bike.SurfaceType.Name</td>
+                    <td>@bike.AmountInStock</td>
+                    <td><button type="button" data-bike-id="@bike.Id" class="btn-link js-delete">Delete</button></td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+}
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            var table = $("#bikes").DataTable();
+
+            $("#bikes").on("click", ".js-delete", function () {
+
+                var button = $(this);
+
+                bootbox.confirm("Are you sure you want to delete this bike?", function (result) {
+
+                    if (result) {
+
+                        $.ajax({
+
+                            url: "https://localhost:44329/api/bikes/" + button.attr("data-bike-id"),
+                            method: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+
+
+                            }
+                        });
+
+                    }
+
+                });
+
+            });
+        });
+
+
+    </script>
+
+}
