Fixed api for fetching customers, restricting user roles and some minor additions.

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model BikeToGoRental.Models.RegisterViewModel
+﻿@model BikeToGoRental.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
