--- a/Views/Bikes/Index.cshtml
+++ b/Views/Bikes/Index.cshtml
@@ -30,7 +30,7 @@
 {
     <script>
         $(document).ready(function () {
-            $("#bikes").DataTable({
+            var table =  $("#bikes").DataTable({
                 ajax: {
                     url: "https://localhost:44329/api/bikes",
                     dataSrc: ""
