--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -8,47 +8,61 @@
 
 <h2 style="text-align: center;">Customers</h2>
 
-@if (!Model.Any())
-{
-    <p>There aren't any customers yet.</p>
-}
-
-else
-
-{
-
 <p>
     @Html.ActionLink("New Customer", "New", "Customers", null, new { @class = "btn btn-primary" })
 </p>
-    <table id="customers" class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th>Customer</th>
-                <th>Membership Type</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
-                    <td>@customer.MembershipType.Name</td>
-                    <td><button type="button" data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button></td>
-                </tr>
-            }
-        </tbody>
-    </table>
+<table id="customers" class="table table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Customer</th>
+            <th>Membership Type</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+       
+    </tbody>
+</table>
 
-}
+
 
 @section scripts
 {
     <script>
         $(document).ready(function () {
-            var table =  $("#customers").DataTable();
+           var table = $("#customers").DataTable({
+                ajax: {
+                    url: "https://localhost:44329/api/customers",
+                    dataSrc: ""
+                },
+                columns: [
 
-            $("#customers").on("click",".js-delete", function () {
+                    {
+                        data: "name",
+                        render: function (data, type, customer) {
+                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                        }
+                    },
+
+                    {
+                        data: "membershipType.name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                        }
+                    },
+
+
+                ]
+            });
+
+
+
+
+
+            $("#customers").on("click", ".js-delete", function () {
 
                 var button = $(this);
 
@@ -64,6 +78,7 @@ else
                                 table.row(button.parents("tr")).remove().draw();
                                
 
+
                             }
                         });
 
@@ -76,7 +91,8 @@ else
 
 
     </script>
-    
-    
-    
+
+
+
+
 }
