form for new rentals, typeahead option, filtering not implemented , neither the post api for the new form works yet.

--- a/Views/Shared/NavBar.cshtml
+++ b/Views/Shared/NavBar.cshtml
@@ -6,6 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="nav navbar-nav">
+            <li><a class="nav-design">@Html.ActionLink("New Rental", "New", "Rentals")</a></li>
             <li><a class="nav-design">@Html.ActionLink("Customers", "Index", "Customers")</a></li>
             <li><a class="nav-design">@Html.ActionLink("Bikes", "Index", "Bikes")</a></li>
         </ul>
