--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -50,7 +50,7 @@
                     {
                         data: "id",
                         render: function (data) {
-                            return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                            return "<button class='btn btn-danger js-delete' data-customer-id=" + data + ">Delete</button>";
                         }
                     },
 
