--- a/Views/Rentals/New.cshtml
+++ b/Views/Rentals/New.cshtml
@@ -10,14 +10,14 @@
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
-            <input id="customer" type="text" value="" class="form-control" />
+            <input id="customer" name="customer" data-rule-validCustomer="true" required type="text" value="" class="form-control" />
         </div>
     </div>
 
     <div class="form-group">
         <label>Bike</label>
         <div id="div" class="tt-container">
-            <input id="bike" type="text" value="" class="form-control" />
+            <input id="bike" name="bike" data-rule-SelectAtleastOneBike="false" type="text" value="" class="form-control" />
         </div>
     </div>
 
@@ -32,18 +32,20 @@
 
 @section scripts
 {
+
+    @Scripts.Render("~/bundles/jqueryval")
     
     <script>
         $(document).ready(function () {
 
             var vm = {
-                bikeIds : []
+                bikeIds: []
             };
-            
+
 
             var customers = new Bloodhound({
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
-                queryTokenizer: Bloodhound.tokenizers.whitespace,                
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
                 remote: {
                     url: '/api/customers?query=%QUERY',
                     wildcard: '%QUERY'
@@ -59,7 +61,7 @@
                 display: 'name',
                 source: customers
             }).on("typeahead:select", function (e, customer) {
-                vm.customerId = customer.Id;
+                vm.customerId = customer.id;
 
             });
 
@@ -86,25 +88,46 @@
 
                 $("#bike").typeahead("val", "");
 
-                vm.bikeIds.push(bike.Id);
+                vm.bikeIds.push(bike.id);
             });
 
-            $("#newRental").submit(function (e) {
-                e.preventDefault();
+            $.validator.addMethod("ValidCustomer", function () {
+                return vm.customerId && vm.customerId !== 0;
+            }, "Please select a valid customer!");
 
-                $.ajax({
-                    url: "/api/newRentals",
-                    method: "POST",
-                    data: vm
-                })
-                    .done(function () {
-                        console.log("done");
+
+            $.validator.addMethod("SelectAtleastOneBike", function () {
+                return vm.bikeIds.lenght > 0;
+            }, "Please select at least one bike.");
+
+           var validator = $("#newRental").validate({
+                submitHandler: function () {
+
+                    $.ajax({
+                        url: "https://localhost:44329/api/newRentals",
+                        method: "POST",
+                        data: vm
                     })
-                    .fail(function () {
+                        .done(function () {
+                            toastr.success("Rentals successfully added.")
 
-                    });
-            });
-        });
+                            $("#customer").typeahead("val", "");
+                            $("#bike").typeahead("val", "");
+                            $("#bikes").empty();
+
+                            vm = { bikeIds: [] };
+
+                            validator.resetForm();
+                        })
+                        .fail(function () {
+                            toast.error("There is an error.")
+                        });
+
+                    return false;
+                  }
+             });         
+               
+         });
     </script>
     
     
