--- a/Views/Rentals/Index.cshtml
+++ b/Views/Rentals/Index.cshtml
@@ -17,7 +17,7 @@
             <th>Customer</th>
             <th>Bike</th>
             <th>Date Rented</th>
-            <th>Date Returned</th>
+            <th>Membership period</th>
             <th>Delete</th>
         </tr>
     </thead>
@@ -51,7 +51,7 @@
                         data: "dateRented"
                     },
                     {
-                        data: "dateReturned"
+                        data: "customer.membershipType.name"
                     },
                     {
                         data: "id",
