--- a/Content/bootstrap-lumen.css
+++ b/Content/bootstrap-lumen.css
@@ -593,7 +593,7 @@ pre code {
 }
 
 .container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
-  width: 100%;
+  width: 80%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -634,9 +634,29 @@ pre code {
   margin-left: -15px;
 }
 
+.bike-pics {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    position: relative;
+    float: right;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#bike-order {
+    position:absolute;
+    margin-left: -50px;
+    left: 50%;
+    width: 100px;
+    bottom: 10px;
+}
+
+
+
 .no-gutters {
-  margin-right: 0;
-  margin-left: 0;
+    margin-right: 0;
+    margin-left: 0;
 }
 
 .no-gutters > .col,
@@ -651,26 +671,47 @@ pre code {
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
 .col-xl-auto {
-  position: relative;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
-.col {
-  -ms-flex-preferred-size: 0;
-      flex-basis: 0;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  max-width: 100%;
+.col-sm-5-read {
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-top: 35px;
+    margin-left: 5px;
+    border-radius: 25px;
+    border: 2px solid #f0f0f0;
+}
+
+
+    .col {
+        -ms-flex-preferred-size: 0;
+        flex-basis: 0;
+        -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+        flex-grow: 1;
+        max-width: 100%;
+    }
+
+.col-bike {
+    font-size: 25px;
+    display: block;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .row-cols-1 > * {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
-  max-width: 100%;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
 }
 
 .row-cols-2 > * {
@@ -1016,12 +1057,12 @@ pre code {
             flex: 0 0 41.6666666667%;
     max-width: 41.6666666667%;
   }
-  .col-sm-6 {
-    -webkit-box-flex: 0;
+    .col-sm-6 {
+        -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
-            flex: 0 0 50%;
-    max-width: 50%;
-  }
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
   .col-sm-7 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 58.3333333333%;
@@ -11171,3 +11212,4 @@ a.list-group-item-danger.active:hover, a.list-group-item-danger.active:focus {
 .modal .close:not(:disabled):not(.disabled):hover, .modal .close:not(:disabled):not(.disabled):focus {
   color: #000;
 }
+
