--- a/Views/Bikes/ReadOnlyIndex.cshtml
+++ b/Views/Bikes/ReadOnlyIndex.cshtml
@@ -6,45 +6,56 @@
 
 <h2 style="text-align: center;">Bikes</h2>
 
-    <table id="bikes" class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th>Bike</th>
-                <th>Model</th>
-            </tr>
-        </thead>
-        <tbody>
-           
-        </tbody>
-    </table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-5-read">
+            <img class="bike-pics" src="https://fricdn.dk//Files/Images/FriBikeShop/ProductImages/graa-cykel-hardtail-mtb-scott-aspect-910-77-274661005_1.jpg?width=840&height=573&bgcolor=fff&format=jpeg&quality=80" />
+            <button id="bike-order"  type="submit" class="btn btn-primary">
+                Order now </button>
+</div>
+        <div class="col-sm-5-read">
+            <img class="bike-pics" src="https://fricdn.dk//Files/Images/FriBikeShop/ProductImages/graa-cykel-hardtail-mtb-scott-aspect-910-77-274661005_1.jpg?width=840&height=573&bgcolor=fff&format=jpeg&quality=80" />
+            <button id="bike-order" type="submit" class="btn btn-primary">
+                Order now
+            </button>
+        </div>
+
+        <div class="col-sm-5-read">
+            <img class="bike-pics" src="https://fricdn.dk//Files/Images/FriBikeShop/ProductImages/graa-cykel-hardtail-mtb-scott-aspect-910-77-274661005_1.jpg?width=840&height=573&bgcolor=fff&format=jpeg&quality=80" />
+            <button id="bike-order" type="submit" class="btn btn-primary">
+                Order now
+            </button>
+        </div>
+    </div>
+
+    </div>
 
 
 @section scripts
 {
     <script>
-        $(document).ready(function () {
-            $("#bikes").DataTable({
-                ajax: {
-                    url: "https://localhost:44329/api/bikes",
-                    dataSrc: ""
-                },
-                columns: [
-
-                    {
-                        data: "name"
-                        
-                    },
-
-                    {
-                        data: "model"
-                    }
-                   
-                ]
+        fetch('https://localhost:44329/api/bikes')
+            .then(function (response) {
+                return response.json();
+            })
+            .then(function (data) {
+                appendData(data);
+            })
+            .catch(function (err) {
+                console.log('error: ' + err);
             });
-  
-        });
+        function appendData(data) {
+            var mainContainer = document.getElementsByClassName("row")[0];
+            var counter = 0;
+            for (var i = 0; i < data.length; i++) {
+                var div = document.createElement("div");
+                div.id = "div" + counter++;
+                div.innerHTML = '<span class="col-bike">Name:' + data[i].name + '<br/>Model: ' + data[i].model + '<br/>Surface type:'
+                    + data[i].surfaceType.name + '<br/>Gears: ' + data[i].gears + '<br/>Sizes:' + data[i].frameSize + '</span>';
+                mainContainer.children[i].appendChild(div)
+            }
 
-
+        }
     </script>
 
 }
