Layout changes, need to apply more styling at some places

--- a/Views/Bikes/ReadOnlyIndex.cshtml
+++ b/Views/Bikes/ReadOnlyIndex.cshtml
@@ -4,31 +4,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 style="text-align: center;">Bikes</h2>
+    <body>
+        
+            <h2 style="text-align: center;">Bikes</h2>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-5-read">
+                        <img class="bike-pics" src="https://i7.pngguru.com/preview/181/269/245/downhill-mountain-biking-giant-bicycles-downhill-bike-mountain-bike-bike.jpg" />
+                        <button id="bike-order" type="submit" class="btn btn-primary">
+                            Order now
+                        </button>
+                    </div>
+                    <div class="col-sm-5-read">
+                        <img class="bike-pics" src="https://i7.pngguru.com/preview/181/269/245/downhill-mountain-biking-giant-bicycles-downhill-bike-mountain-bike-bike.jpg" />
+                        <button id="bike-order" type="submit" class="btn btn-primary">
+                            Order now
+                        </button>
+                    </div>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-5-read">
-            <img class="bike-pics" src="https://fricdn.dk//Files/Images/FriBikeShop/ProductImages/graa-cykel-hardtail-mtb-scott-aspect-910-77-274661005_1.jpg?width=840&height=573&bgcolor=fff&format=jpeg&quality=80" />
-            <button id="bike-order"  type="submit" class="btn btn-primary">
-                Order now </button>
-</div>
-        <div class="col-sm-5-read">
-            <img class="bike-pics" src="https://fricdn.dk//Files/Images/FriBikeShop/ProductImages/graa-cykel-hardtail-mtb-scott-aspect-910-77-274661005_1.jpg?width=840&height=573&bgcolor=fff&format=jpeg&quality=80" />
-            <button id="bike-order" type="submit" class="btn btn-primary">
-                Order now
-            </button>
-        </div>
+                    <div class="col-sm-5-read">
+                        <img class="bike-pics" src="https://i7.pngguru.com/preview/181/269/245/downhill-mountain-biking-giant-bicycles-downhill-bike-mountain-bike-bike.jpg" />
+                        <button id="bike-order" type="submit" class="btn btn-primary">
+                            Order now
+                        </button>
+                    </div>
+                </div>
 
-        <div class="col-sm-5-read">
-            <img class="bike-pics" src="https://fricdn.dk//Files/Images/FriBikeShop/ProductImages/graa-cykel-hardtail-mtb-scott-aspect-910-77-274661005_1.jpg?width=840&height=573&bgcolor=fff&format=jpeg&quality=80" />
-            <button id="bike-order" type="submit" class="btn btn-primary">
-                Order now
-            </button>
-        </div>
-    </div>
-
-    </div>
+            </div>
+    </body>
 
 
 @section scripts
