--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,18 +3,16 @@
 }
 
 <div class="jumbotron">
-    <h1>BikeToGo Rentals</h1>
+    <h1>Rentals</h1>
     <p class="lead">The brand new bicycle rental service soon in your town!</p>
-    <p><a href="https://localhost:44329/Account/Login?ReturnUrl=%2FBikes" class="btn btn-primary btn-lg">Get started &raquo;</a></p>
+    <p><a href="https://localhost:44329/Bikes" class="btn btn-primary btn-lg">Get started &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-12">
         <h2>Who are we?</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            We are group of group of young enterprenueurs and keen cyclist. Want to know us more in depth?
         </p>
         <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
