--- a/Content/bootstrap-lumen.css
+++ b/Content/bootstrap-lumen.css
@@ -50,32 +50,64 @@
           box-sizing: border-box;
 }
 
-html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+* {
+    margin: 0;
+    padding: 0;
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+
+
+html, body {
+    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #f0f0f0;
+    background: url(/Image/bicycle.jpg) no-repeat center center fixed;
+    background-size: cover;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    margin: 0;
+    padding: 0;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+
+}
+
+body {
+    overflow: auto !important;
+    background: rgba(0, 0, 0, 0.2) !important;
+}
+
+#wrapper {
+    min-height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+
+
+
+article, aside, figcaption, figure, header, hgroup, main, nav, section {
     display: block;
 }
 
-
-
-body {
-  margin: 0;
-  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #222;
-  text-align: left;
-  background-color: #fff;
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 50px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.1);
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
-  outline: 0 !important;
+    outline: 0 !important;
 }
 
 hr {
@@ -91,8 +123,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 abbr[title],
@@ -164,22 +196,57 @@ sup {
 }
 
 a {
-    color: #158CBA;
+    color: #f6f6f6;
     text-decoration: none;
     background-color: transparent;
-    font-size: 20px;
-    margin-top:-5x;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: -5px;
     margin-right: 10px;
 }
+    a:hover {
+        color: #40e0d0;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
 
-a#registerLink {
-    color: #158CBA;
-    text-decoration: none;
-    background-color: transparent;
-    font-size: 20px;
-    margin-top: -5x;
-    margin-right: 20px !important;
-}
+    a#registerLink {
+        color: #f6f6f6;
+        text-decoration: none;
+        font-size: 25px;
+        font-weight: bold;
+        margin-top: -5px;
+        margin-right: 20px !important;
+    }
+
+        a#registerLink:hover {
+            color: #40e0d0;
+            background-color: rgba(0, 0, 0, 0.3);
+        }
+    a#navLink {
+        color: #f6f6f6;
+        text-decoration: none;
+        font-size: 25px;
+        font-weight: bold;
+        margin-top: -5px;
+        margin-right: 20px !important;
+    }
+        a#navLink:hover {
+            color: #40e0d0;
+            background-color: rgba(0, 0, 0, 0.3);
+        }
+
+    a#loginLink {
+        color: #f6f6f6;
+        text-decoration: none;
+        font-size: 25px;
+        font-weight: bold;
+        margin-top: -5x;
+        margin-right: 20px !important;
+    }
+        a#loginLink:hover {
+            color: #40e0d0;
+            background-color: rgba(0, 0, 0, 0.3);
+        }
 
 a:not([href]) {
   color: inherit;
@@ -376,9 +443,10 @@ template {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-  line-height: 1.2;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+    line-height: 1.2;
+    color: #FFF;
 }
 
 h1, .h1 {
@@ -406,8 +474,8 @@ h6, .h6 {
 }
 
 .lead {
-  font-size: 1.09375rem;
-  font-weight: 300;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .display-1 {
@@ -648,7 +716,6 @@ pre code {
     position:absolute;
     margin-left: -50px;
     left: 50%;
-    width: 100px;
     bottom: 10px;
 }
 
@@ -1093,12 +1160,12 @@ pre code {
             flex: 0 0 91.6666666667%;
     max-width: 91.6666666667%;
   }
-  .col-sm-12 {
-    -webkit-box-flex: 0;
+    .col-sm-12 {
+        -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
-            flex: 0 0 100%;
-    max-width: 100%;
-  }
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
   .order-sm-first {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
@@ -1926,7 +1993,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #222;
+  color: #FFF;
 }
 
 .table th,
@@ -2822,15 +2889,14 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #158CBA;
-  border-color: #158CBA;
+  background-color: transparent;
+  border: solid 1px #f6f6f6
 }
 
-.btn-primary:hover {
-  color: #fff;
-  background-color: #117298;
-  border-color: #106a8c;
-}
+    .btn-primary:hover {
+        color: #fff;
+        background-color: #40E0D0;
+    }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
@@ -4651,19 +4717,19 @@ input[type="button"].btn-block {
 }
 
 .navbar {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 2px 1rem;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 2px 1rem;
 }
 
 .navbar .container,
@@ -4689,7 +4755,7 @@ input[type="button"].btn-block {
   font-size: 1.09375rem;
   line-height: inherit;
   white-space: nowrap;
-  font-size: 25px;
+  font-size: 40px;
   margin-left: 10px;
 }
 
@@ -5003,12 +5069,13 @@ input[type="button"].btn-block {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+    color: #FFD700;
+    font-weight: bold;
 }
 
-.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-  color: rgba(0, 0, 0, 0.9);
-}
+    .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
+        color: #40e0d0;
+    }
 
 .navbar-light .navbar-nav .nav-link {
   color: rgba(0, 0, 0, 0.5);
@@ -5642,7 +5709,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #fafafa;
+  background-color: transparent;
   border-radius: 0.3rem;
 }
 
@@ -10799,8 +10866,8 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .navbar {
-  border-style: solid;
-  border-width: 0 1px 4px 1px;
+    border-width: 0 1px 4px 1px;
+    background:rgba(0, 0, 0, 0.2);
 }
 
 .bg-primary {
@@ -10818,7 +10885,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .btn {
   border-style: solid;
-  border-width: 0 1px 4px 1px;
+  border-width: 1px 1px 1px 1px;
   text-transform: uppercase;
 }
 
@@ -10836,7 +10903,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-primary {
-  border-color: #127ba3;
+  border-color: none;
 }
 
 .btn-secondary {
@@ -11200,9 +11267,9 @@ a.list-group-item-danger.active:hover, a.list-group-item-danger.active:focus {
 }
 
 .jumbotron {
-  border: 1px solid #f0f0f0;
-  -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
+    border: none;
+    -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .modal .close {
