added some styling for admin panel, fixed nav bar toggler, added social media ot footer, still need to add about us page as well as my rentals page with info about your rentals.

--- a/Content/DataTables/css/dataTables.bootstrap4.css
+++ b/Content/DataTables/css/dataTables.bootstrap4.css
@@ -1,9 +1,10 @@
 table.dataTable {
-  clear: both;
-  margin-top: 6px !important;
-  margin-bottom: 6px !important;
-  max-width: none !important;
-  border-collapse: separate !important;
+    clear: both;
+    margin-top: 6px !important;
+    margin-bottom: 6px !important;
+    max-width: none !important;
+    border-collapse: separate !important;
+    background: darkgrey;
 }
 table.dataTable td,
 table.dataTable th {
