--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -6,6 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h2 style="text-align: center;">Customers</h2>
 
 <p>
@@ -14,13 +15,12 @@
 <table id="customers" class="table table-bordered table-hover">
     <thead>
         <tr>
-            <th>Customer</th>
-            <th>Membership Type</th>
-            <th>Delete</th>
+            <th>Customer:</th>
+            <th>Membership Type:</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
-       
     </tbody>
 </table>
 
@@ -30,7 +30,8 @@
 {
     <script>
         $(document).ready(function () {
-           var table = $("#customers").DataTable({
+            var table = $("#customers").DataTable({
+                responsive: true,
                 ajax: {
                     url: "https://localhost:44329/api/customers",
                     dataSrc: ""
@@ -76,7 +77,7 @@
                             method: "DELETE",
                             success: function () {
                                 table.row(button.parents("tr")).remove().draw();
-                               
+
 
 
                             }
@@ -91,8 +92,6 @@
 
 
     </script>
-
-
 
 
 }
