--- a/Views/Rentals/Index.cshtml
+++ b/Views/Rentals/Index.cshtml
@@ -4,97 +4,105 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h2 style="text-align: center;">All Rentals</h2>
-
-
 
 <p>
     @Html.ActionLink("New Rental", "New", "Rentals", null, new { @class = "btn btn-primary" })
 </p>
-<table id="rentals" class="table table-bordered table-hover">
-    <thead>
-        <tr>
-            <th>Customer</th>
-            <th>Bike</th>
-            <th>Date Rented</th>
-            <th>Membership period</th>
-            <th>Delete</th>
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
 
-@section scripts
+
+    <table id="rentals" class="table table-bordered table-hover" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Customer:</th>
+                <th>Bike:</th>
+                <th>Date Rented:</th>
+                <th>Membership period:</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+
+    @section scripts
 {
-    <script>
-        $(document).ready(function () {
-            var table = $("#rentals").DataTable({
-                ajax: {
-                    url: "https://localhost:44329/api/rentals",
-                    dataSrc: ""
-                },
-                columns: [
-
-                    {
-                        data: "name",
-                        render: function (data, type, rental) {
-                            return "<a href='/rentals/edit/" + rental.id + "'>" + rental.customer.name + "</a>";
-                        }
+        <script>
+            $(document).ready(function () {
+                var table = $("#rentals").DataTable({
+                    responsive: true,
+                    ajax: {
+                        url: "https://localhost:44329/api/rentals",
+                        dataSrc: ""
                     },
+                    columns: [
 
-                    {
-                        data: "bike.name"
-                               
-                    },
-                    {
-                        data: "dateRented"
-                    },
-                    {
-                        data: "customer.membershipType.name"
-                    },
-                    {
-                        data: "id",
-                        render: function (data) {
-                            return "<button class='btn btn-danger js-delete' data-rental-id=" + data + ">Delete</button>";
-                        }
-                    },
-
-
-                ]
-            });
-
-
-
-
-
-            $("#rentals").on("click", ".js-delete", function () {
-
-                var button = $(this);
-
-                bootbox.confirm("Are you sure you want to delete this rental?", function (result) {
-
-                    if (result) {
-
-                        $.ajax({
-
-                            url: "https://localhost:44329/api/rentals/" + button.attr("data-rental-id"),
-                            method: "DELETE",
-                            success: function () {
-                                table.row(button.parents("tr")).remove().draw();
-
-
+                        {
+                            data: "name",
+                            render: function (data, type, rental) {
+                                return "<a href='/rentals/edit/" + rental.id + "'>" + rental.customer.name + "</a>";
                             }
-                        });
+                        },
 
-                    }
+                        {
+                            data: "bike.name"
 
+                        },
+                        {
+                            data: "dateRented"
+                        },
+                        {
+                            data: "customer.membershipType.name"
+                        },
+                        {
+                            data: "id",
+                            render: function (data) {
+                                return "<button class='btn btn-danger js-delete' data-rental-id=" + data + ">Delete</button>";
+                            }
+                        },
+
+
+                    ]
                 });
 
+
+
+
+
+                $("#rentals").on("click", ".js-delete", function () {
+
+                    var button = $(this);
+
+                    bootbox.confirm("Are you sure you want to delete this rental?", function (result) {
+
+                        if (result) {
+
+                            $.ajax({
+
+                                url: "https://localhost:44329/api/rentals/" + button.attr("data-rental-id"),
+                                method: "DELETE",
+                                success: function () {
+                                    table.row(button.parents("tr")).remove().draw();
+
+
+                                }
+                            });
+
+                        }
+
+                    });
+
+                });
             });
-        });
 
 
-    </script>
+        </script>
 
-}
+
+
+    }
+
+
+
