Added my rentals page, but no logic behind it. Fixed about us page, but just with template info. Have to extend my knowledge further before continuing with it.

--- a/Views/Bikes/ReadOnlyIndex.cshtml
+++ b/Views/Bikes/ReadOnlyIndex.cshtml
@@ -28,7 +28,7 @@
                             Order now
                         </button>
                     </div>
-                    <div class="col-sm-5-read">
+                    <div id="bike-container" class="col-sm-5-read">
                         <img class="bike-pics" src="Image/mondraker-removebg-preview.png" />
                         <button id="bike-order" type="submit" class="btn btn-primary">
                             Order now
