--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <p>
             We are group of group of young enterprenueurs and keen cyclist. Want to know us more in depth?
         </p>
-        <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="https://localhost:44329/Home/About">Learn more &raquo;</a></p>
     </div>
 
 </div>
