--- a/Content/bootstrap-lumen.css
+++ b/Content/bootstrap-lumen.css
@@ -774,21 +774,28 @@ pre code {
     padding-left: 15px;
     margin-top: 35px;
     margin-left: 5px;
-    margin-bottom: 35px;
     border-radius: 25px;
     border: 1px solid #f0f0f0;
     background: rgba(0, 0, 0, 0.2) !important;
 }
 
+#bike-container {
+    margin-bottom: 30px;
+}
 
-    .col {
-        -ms-flex-preferred-size: 0;
-        flex-basis: 0;
-        -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-        flex-grow: 1;
-        max-width: 100%;
-    }
+#socialLoginForm {
+    margin-bottom: 30px;
+}
+
+
+.col {
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    max-width: 100%;
+}
 
 .col-bike {
     font-size: 25px;
@@ -1365,7 +1372,6 @@ pre code {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 16.6666666667%;
             flex: 0 0 16.6666666667%;
-    max-width: 16.6666666667%;
   }
   .col-md-3 {
     -webkit-box-flex: 0;
@@ -2860,6 +2866,10 @@ textarea.form-control {
   .form-inline .custom-control-label {
     margin-bottom: 0;
   }
+}
+
+#registerButton {
+    margin-bottom: 30px;
 }
 
 .btn {
